creaCards / productos de base

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 <body>
     <main>
-        <h1>PortTreat</h1>
-        <h2>tienda online</h2>
+        <h1 class="espacio-1">PortTreat</h1>
+        <h2 class="espacio-4">tienda online</h2>
         <section>
-            <h2>Pre diseñados</h2>
-            
+            <h2 class="espacio-3">Pre diseñados</h2>
+            <div id="productos"></div>
+            <div id="carrito"></div>
         </section>
     </main>
     <!-- JS -->
