--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <h2 class="espacio-4">tienda online</h2>
         <section>
             <h2 class="espacio-3">Pre diseñados</h2>
-            <div id="productos"></div>
-            <div id="carrito"></div>
+            <div id="productos" class="espacio-4"></div>
+            <div class="card-carrito">
+                <h3>Carrito de compras</h3>
+                <div id="carrito">
+                    
+                </div>
+            </div>
         </section>
     </main>
     <!-- JS -->
