carrito card absolute

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <main>
         <h1 class="espacio-1">PortTreat</h1>
         <h2 class="espacio-4">tienda online</h2>
+        <!-- pre diseñados -->
         <section>
             <h2 class="espacio-3">Pre diseñados</h2>
             <div id="productos" class="espacio-4"></div>
+        </section>
+        <!-- carrito -->
+        <section class="centrado">
             <div class="card-carrito">
                 <h3>Carrito de compras</h3>
                 <div id="carrito">
