carrito + boton borrar item + boton borrar carrito

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="productos" class="espacio-4"></div>
         </section>
         <!-- carrito -->
-        <section class="centrado">
+        <section class="centrado contiene-carrito">
             <div class="card-carrito">
                 <h3>Carrito de compras</h3>
                 <div id="carrito">
