--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
     <main>
-        <h1 class="espacio-1">PortTreat</h1>
-        <h2 class="espacio-4">tienda online</h2>
+        <h1 class="espacio-4">PortTreat <span class="tienda-online-texto">online</span></h1>
         <!-- pre diseñados -->
         <section>
             <h2 class="espacio-3">Pre diseñados</h2>
